# primitive_polynomials

./: README.md  run_cmake.sh
Primpoly/: CMakeLists.txt  Primpoly.cpp  Primpoly.h  makefile  ppArith.cpp  ppArith.h  ppBigInt.cpp  ppBigInt.h  ppFactor.cpp  ppFactor.h  ppOperationCount.cpp  ppOperationCount.h  ppParser.cpp  ppParser.h  ppPolynomial.cpp  ppPolynomial.h  ppUnitTest.cpp  ppUnitTest.h
Primpoly/FactorTables/: c02minus.txt  c03minus.txt  c05minus.txt  c07minus.txt  c11minus.txt
PrimpolyC/: CMakeLists.txt  Primpoly.cpp  Primpoly.h  ppArith.cpp  ppArith.h  ppFactor.cpp  ppFactor.h  ppHelperFunc.cpp  ppHelperFunc.h  ppIO.cpp  ppIO.h  ppOrder.cpp  ppOrder.h  ppPolyArith.cpp  ppPolyArith.h
doc/: knownGood.txt  knownGoodC.txt
